feat(config): add new config options for diff and commit commands

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "lib": ["es2022"],
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
