--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "@types/node": "^22.5.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.7.0"
   }
 }
